extends CanvasLayer


@onready var game_over: PanelContainer = $GameOver
@onready var level_won: PanelContainer = $LevelWon
@onready var last_level_won: PanelContainer = $LastLevelWon
@onready var upgrade_selector: PanelContainer = $UpgradeSelector
@onready var pause: Panel = $Pause
@onready var story_board: Panel = $StoryBoard
@onready var name_setup: Panel = $NameSetup
